--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+4.0.6 (2018-11-12)
+------------------
+- test
+- Add --any-branch flag to release.
+- Change wheel version.
+
 4.0.4 (2018-03-02)
 ------------------
 - Preserve changelog blank lines smartly
